version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/Graphics/AnalysisSettingsGraph.rst.txt
.. vale off



:class:`AnalysisSettingsGraph`
==============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.Graphics.AnalysisSettingsGraph(analysisSettings: Ansys.Common.Interop.DSObjectsAuto.IDSAnalysisSettings)

   Bases: :py:obj:`object`



.. py:currentmodule:: AnalysisSettingsGraph

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~BoundaryConditionVisibility`
            - BoundaryConditionVisibility property.







Property detail
---------------
.. py:property:: BoundaryConditionVisibility
   :type: Optional[Ansys.Mechanical.Graphics.BoundaryConditionVisibilityDictionary]


   
   BoundaryConditionVisibility property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on